--- a/styleguide/scss/core/_core-buttons.scss
+++ b/styleguide/scss/core/_core-buttons.scss
@@ -1,29 +1,22 @@
-//-----------------------------------------------------------------------//
-// $BUTTONS
-// These are the base styles for buttons.
-//-----------------------------------------------------------------------//
-
-
-//-----------------------------------------------------------------------//
-// MIXINS AND FUNCTIONS
-//-----------------------------------------------------------------------//
-
-// TBD
-
-
-//-----------------------------------------------------------------------//
-// STYLES
-//-----------------------------------------------------------------------//
-
+/**
+ * @atom Button
+ * @section Styles > buttons
+ * @modifiers
+ *  button, input[type="button"], input[type="submit"], input[type="cancel"], a[role="button"] - Default styles for a button.
+ * @markup
+ *  <button />
+ *  <input type="button" />
+ *  <input type="submit" />
+ *  <input type="cancel" />
+ *  <a role="button"></a>
+ */
 button, input[type="button"], input[type="submit"], input[type="cancel"], a[role="button"] {
 
     display: inline-block;
     top: -1px;
     margin: 0;
     border: 0;
-    padding: 0;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 0 1rem;
     text-align: center;
     text-decoration: none;
     vertical-align: middle;
@@ -35,7 +28,6 @@ button, input[type="button"], input[type="submit"], input[type="cancel"], a[role
     font-size: 1rem;
     line-height: 3;
     font-weight: 500;
-    vertical-align: middle;
     width: 100%;
 
     border: solid var(--sf-line-width) var(--sf-color-buttons);
