--- a/styleguide/scss/_config.scss
+++ b/styleguide/scss/_config.scss
@@ -1,12 +1,18 @@
-//------------------------------------//
-//  $CONFIG
-//------------------------------------//
-
-// SFUMATO VERSION
-// ==================================================================
+/**
+ * SFUMATO is a scalable SCSS framework that leverages modern CSS standards. 
+ * Documented with the Nucleus style guide syntax: https://holidaypirates.github.io/nucleus/annotation-reference.html
+ */
 
 $sfumato-version: "3.1.0";
-// sfumato Version can be displayed using <span id="sfumato-version" role="status"></span>
+
+/**
+ * @atom SFUMATO Version
+ * @section Configuration
+ * @modifiers
+ *  span#sfumato-version[role="status"] - Will set the content of this item to the SFUMATO version text.
+ * @markup
+ *   <span id="sfumato-version" role="status"></span>
+ */
 span#sfumato-version[role="status"]::after {
 
     content: quote($sfumato-version);
