--- a/styleguide/scss/core/_core-forms.scss
+++ b/styleguide/scss/core/_core-forms.scss
@@ -1,14 +1,11 @@
-//-----------------------------------------------------------------------//
-// $FORMS
-// Mixins, functions, and styles for working with forms.
-//-----------------------------------------------------------------------//
-
-
-//-----------------------------------------------------------------------//
-// MIXINS AND FUNCTIONS
-//-----------------------------------------------------------------------//
-
-// Set input placeholder text.
+/**
+ * @nuclide Placeholder Style
+ * @section Forms > Inputs
+ * @modifiers
+ *  @include sf-placeholder - Style an input control placeholder.
+ * @markup
+ *  @include sf-placeholder { color: #252525; }
+ */
 @mixin sf-placeholder {
 
     // scss-lint:disable VendorPrefix.
@@ -16,21 +13,6 @@
     &:-ms-input-placeholder { @content; } // IE 10+
     &::-ms-input-placeholder { @content; } // Edge
     &::-webkit-input-placeholder { @content; } // Safari and Chrome
-}
-
-
-//-----------------------------------------------------------------------//
-// STYLES
-//-----------------------------------------------------------------------//
-
-button,
-input,
-optgroup,
-select,
-textarea,
-option {
-
-    font-family: var(--font-body);
 }
 
 button,
@@ -66,11 +48,13 @@ legend {
       width: 100%;
 }
 
-// Normalize form controls
-//
-// While most of our form styles require extra classes, some basic normalization
-// is required to ensure optimum display with or without those classes to better
-// address browser inconsistencies.
+/**
+ * Normalize form controls
+ *
+ * While most of our form styles require extra classes, some basic normalization
+ * is required to ensure optimum display with or without those classes to better
+ * address browser inconsistencies.
+ */
 
 // Better position radios and checkboxes.
 input[type="radio"],
@@ -187,7 +171,6 @@ form, [role="form"] {
                 padding: 0;
                 margin: 0;
                 font-size: 1rem;
-                line-height: $line-height;
                 color: var(--sf-color-dark);
             }
 
@@ -436,7 +419,6 @@ form, [role="form"] {
                     box-shadow: none;
                     -webkit-appearance: none;
                     -moz-appearance: none;
-                    line-height: $line-height;
                     color: var(--sf-color-dark);
 
                     &:focus {
