--- a/styleguide/scss/core/_core-initialize.scss
+++ b/styleguide/scss/core/_core-initialize.scss
@@ -1,13 +1,7 @@
-//------------------------------------//
-//  $INITIALIZE
-//------------------------------------//
-
-//-----------------------------------------------------------------------//
-// Reset defaults and instantiate settings from _CONFIG partial
-//-----------------------------------------------------------------------//
-
-// All elements will adopt `box-sizing:border-box;`
-// as per paulirish.com/2012/box-sizing-border-box-ftw
+/**
+ * Font and other base styles are established in this file.
+ * It should be called after the configuration files have been loaded.
+ */
 * {
     
     &,
@@ -32,155 +26,145 @@
     
 html {
 
-    $largest-font-size: $font-size;
-    $largest-line-height: $line-height;
-
-    @if ($phablet-font-size and $phablet-breakpoint) {
-
-        $largest-font-size: $phablet-font-size;
-        $largest-line-height: $phablet-line-height;
+    --sf-font-size: var(--sf-zero-font-size);
+    --sf-font-weight: var(--sf-zero-font-weight);
+    --sf-line-height: var(--sf-zero-line-height);
     
-        @include sf-media($from: phablet) {
+    @include sf-media($from: phablet) {
 
-            font-size: $phablet-font-size;
-            line-height: $phablet-line-height;
-        }
+        --sf-font-size: var(--sf-phab-font-size);
+        --sf-font-weight: var(--sf-phab-font-weight);
+        --sf-line-height: var(--sf-phab-line-height);
     }
 
-    @if ($tablet-portrait-font-size and $tablet-portrait-breakpoint) {
+    @include sf-media($from: tablet-portrait) {
 
-        $largest-font-size: $tablet-portrait-font-size;
-        $largest-line-height: $tablet-portrait-line-height;
-
-        @include sf-media($from: tablet-portrait) {
-
-            font-size: $tablet-portrait-font-size;
-            line-height: $tablet-portrait-line-height;
-        }
+        --sf-font-size: var(--sf-tabp-font-size);
+        --sf-font-weight: var(--sf-tabp-font-weight);
+        --sf-line-height: var(--sf-tabp-line-height);
     }
 
-    @if ($tablet-landscape-font-size and $tablet-landscape-breakpoint) {
+    @include sf-media($from: tablet-landscape) {
 
-        $largest-font-size: $tablet-landscape-font-size;
-        $largest-line-height: $tablet-landscape-line-height;
-
-        @include sf-media($from: tablet-landscape) {
-
-            font-size: $tablet-landscape-font-size;
-            line-height: $tablet-landscape-line-height;
-        }
+        --sf-font-size: var(--sf-tabl-font-size);
+        --sf-font-weight: var(--sf-tabl-font-weight);
+        --sf-line-height: var(--sf-tabl-line-height);
     }
 
-    @if ($notebook-font-size and $notebook-breakpoint) {
+    @include sf-media($from: notebook) {
 
-        $largest-font-size: $notebook-font-size;
-        $largest-line-height: $notebook-line-height;
-
-        @include sf-media($from: notebook) {
-
-            font-size: $notebook-font-size;
-            line-height: $notebook-line-height;
-        }
+        --sf-font-size: var(--sf-note-font-size);
+        --sf-font-weight: var(--sf-note-font-weight);
+        --sf-line-height: var(--sf-note-line-height);
     }
 
-    @if ($desktop-font-size and $desktop-breakpoint) {
+    @include sf-media($from: desktop) {
 
-        $largest-font-size: $desktop-font-size;
-        $largest-line-height: $desktop-line-height;
-
-        @include sf-media($from: desktop) {
-
-            font-size: $desktop-font-size;
-            line-height: $desktop-line-height;
-        }
+        --sf-font-size: var(--sf-desk-font-size);
+        --sf-font-weight: var(--sf-desk-font-weight);
+        --sf-line-height: var(--sf-desk-line-height);
     }
 
-    @if ($elastic-breakpoint) {
+    @include sf-media($from: elastic) {
 
-        @if ($elastic-font-size) {
-
-            $largest-font-size: $elastic-font-size;
-            $largest-line-height: $elastic-line-height;
-        }
-
-        @include sf-media($from: elastic) {
-
-            font-size: sf-get-max-elastic-width($largest-font-size);
-            line-height: $largest-line-height;
-        }
+        --sf-font-size: var(--sf-elas-font-size);
+        --sf-font-weight: var(--sf-elas-font-weight);
+        --sf-line-height: var(--sf-elas-line-height);
     }
 
-    font-family: var(--font-body);
-    font-size: $font-size;
-    line-height: $line-height;
+    font-family: var(--sf-font-family-body);
+    font-size: var(--sf-font-size);
+    font-weight: var(--sf-font-weight);
+    line-height: var(--sf-line-height);
 
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
-    h1, h2, h3, h4, h5, h6 {
-
-        font-family: var(--font-head);
+    p {
+        
+        margin-bottom: 1rem;
+        
+        &:last-child {
+            
+            margin-bottom: 0;
+        }
     }
-
+    
     @for $i from 1 through 6 {
 
+        --sf-#{"h" + $i}-font-family: var(--sf-zero-#{"h" + $i}-font-family);
+        --sf-#{"h" + $i}-font-size: var(--sf-zero-#{"h" + $i}-font-size);
+        --sf-#{"h" + $i}-font-weight: var(--sf-zero-#{"h" + $i}-font-weight);
+        --sf-#{"h" + $i}-line-height: var(--sf-zero-#{"h" + $i}-line-height);
+        --sf-#{"h" + $i}-margin-top: calc(var(--sf-#{"h" + $i}-font-size) * 0.75);
+        --sf-#{"h" + $i}-margin-bottom: calc(var(--sf-#{"h" + $i}-font-size) * 0.5);
+        
         #{"h" + $i} {
 
-            font-size: calc(var(--#{"h" + $i}-font-size) * var(--#{"h" + $i}-multiplier));
-            line-height: var(--#{"h" + $i}-line-height);
+            font-family: var(--sf-#{"h" + $i}-font-family);
+            font-size: var(--sf-#{"h" + $i}-font-size);
+            font-weight: var(--sf-#{"h" + $i}-font-weight);
+            line-height: var(--sf-#{"h" + $i}-line-height);
+            margin-top: var(--sf-#{"h" + $i}-margin-top);
+            margin-bottom: var(--sf-#{"h" + $i}-margin-bottom);
 
-            @if ($phablet-breakpoint) {
+            &:first-child {
+                
+                margin-top: 0;
+            }
+            
+            #{"h" + $i} + h1, #{"h" + $i} + h2,#{"h" + $i} + h3,
+            #{"h" + $i} + h4,#{"h" + $i} + h5,#{"h" + $i} + h6 {
 
-                @include sf-media($from: phablet) {
+                margin-bottom: 1rem;
+            }
+            
+            @include sf-media($from: phablet) {
 
-                    font-size: calc(var(--phablet-#{"h" + $i}-multiplier) * var(--#{"h" + $i}-font-size));
-                }
+                --sf-#{"h" + $i}-font-size: var(--sf-phab-#{"h" + $i}-font-size);
+                --sf-#{"h" + $i}-font-weight: var(--sf-phab-#{"h" + $i}-font-weight);
+                --sf-#{"h" + $i}-line-height: var(--sf-phab-#{"h" + $i}-line-height);
             }
 
-            @if ($tablet-portrait-breakpoint) {
+            @include sf-media($from: tablet-portrait) {
 
-                @include sf-media($from: tablet-portrait) {
-
-                    font-size: calc(var(--tablet-portrait-#{"h" + $i}-multiplier) * var(--#{"h" + $i}-font-size));
-                }
+                --sf-#{"h" + $i}-font-size: var(--sf-tabp-#{"h" + $i}-font-size);
+                --sf-#{"h" + $i}-font-weight: var(--sf-tabp-#{"h" + $i}-font-weight);
+                --sf-#{"h" + $i}-line-height: var(--sf-tabp-#{"h" + $i}-line-height);
             }
 
-            @if ($tablet-landscape-breakpoint) {
+            @include sf-media($from: tablet-landscape) {
 
-                @include sf-media($from: tablet-landscape) {
-
-                    font-size: calc(var(--tablet-landscape-#{"h" + $i}-multiplier) * var(--#{"h" + $i}-font-size));
-                }
+                --sf-#{"h" + $i}-font-size: var(--sf-tabl-#{"h" + $i}-font-size);
+                --sf-#{"h" + $i}-font-weight: var(--sf-tabl-#{"h" + $i}-font-weight);
+                --sf-#{"h" + $i}-line-height: var(--sf-tabl-#{"h" + $i}-line-height);
             }
 
-            @if ($notebook-breakpoint) {
+            @include sf-media($from: notebook) {
 
-                @include sf-media($from: notebook) {
-
-                    font-size: calc(var(--notebook-#{"h" + $i}-multiplier) * var(--#{"h" + $i}-font-size));
-                }
+                --sf-#{"h" + $i}-font-size: var(--sf-note-#{"h" + $i}-font-size);
+                --sf-#{"h" + $i}-font-weight: var(--sf-note-#{"h" + $i}-font-weight);
+                --sf-#{"h" + $i}-line-height: var(--sf-note-#{"h" + $i}-line-height);
             }
 
-            @if ($desktop-breakpoint) {
+            @include sf-media($from: desktop) {
 
-                @include sf-media($from: desktop) {
-
-                    font-size: calc(var(--desktop-#{"h" + $i}-multiplier) * var(--#{"h" + $i}-font-size));
-                }
+                --sf-#{"h" + $i}-font-size: var(--sf-desk-#{"h" + $i}-font-size);
+                --sf-#{"h" + $i}-font-weight: var(--sf-desk-#{"h" + $i}-font-weight);
+                --sf-#{"h" + $i}-line-height: var(--sf-desk-#{"h" + $i}-line-height);
             }
 
-            @if ($elastic-breakpoint) {
+            @include sf-media($from: elastic) {
 
-                @include sf-media($from: elastic) {
-
-                    font-size: calc(var(--elastic-#{"h" + $i}-multiplier) * var(--#{"h" + $i}-font-size));
-                }
+                --sf-#{"h" + $i}-font-size: var(--sf-elas-#{"h" + $i}-font-size);
+                --sf-#{"h" + $i}-font-weight: var(--sf-elas-#{"h" + $i}-font-weight);
+                --sf-#{"h" + $i}-line-height: var(--sf-elas-#{"h" + $i}-line-height);
             }
         }
     }
 
     pre, code {
         
-        font-family: var(--font-mono);
+        font-family: var(--sf-font-family-mono);
     }
 
     code {
