--- a/styleguide/scss/styleguide.scss
+++ b/styleguide/scss/styleguide.scss
@@ -1,7 +1,9 @@
-//-----------------------------------------------------------------------//
-// STYLE GUIDE
-//-----------------------------------------------------------------------//
+/**
+ * SFUMATO is a scalable SCSS framework that leverages modern CSS standards. 
+ * Documented with the Nucleus style guide syntax: https://holidaypirates.github.io/nucleus/annotation-reference.html
+ */
 
+// DO NOT EDIT
 @import "manifest";
 
 // YOUR CUSTOM PARTIALS
